fix bug, add html import

--- a/tools/sparklog.ipynb
+++ b/tools/sparklog.ipynb
@@ -173,6 +173,7 @@
     "import numpy\n",
     "import time\n",
     "from pandasql import sqldf\n",
+    "import html\n",
     "\n",
     "pandas.options.display.max_rows=50\n",
     "pandas.options.display.max_columns=200\n",
@@ -344,9 +345,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "code_folding": [
-     186
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -472,7 +471,7 @@
     "        \n",
     "        self.realexecutors = df.where(~F.isnull(F.col(\"Executor ID\"))).select(\"Executor ID\").distinct().count()\n",
     "\n",
-    "        if \"spark.sql.execution.id\" in df.where(\"Event='SparkListenerJobStart'\").select(\"Properties.*\").columns:\n",
+    "        if \"spark.sql.execution.id\" in df.where(\"Event='SparkListenerJobStart'\").select(\"Properties.*\").columns:c\n",
     "            df_jobstart=df.where(\"Event='SparkListenerJobStart'\").select(\"Job ID\",\"Submission Time\",F.col(\"Properties.`spark.sql.execution.id`\").alias(\"queryid\"),\"Stage IDs\")\n",
     "        else:\n",
     "            df_jobstart=df.where(\"Event='SparkListenerJobStart'\").select(\"Job ID\",\"Submission Time\",F.lit(0).alias(\"queryid\"),\"Stage IDs\")\n",
