--- a/tools/gazelle_analysis.ipynb
+++ b/tools/gazelle_analysis.ipynb
@@ -295,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "appals=App_Log_Analysis(\"/user/root/spark_logs/application_1645145794788_0014\")"
+    "appals=App_Log_Analysis(\"/user/root/spark_logs/application_1645145794788_0014\",None)"
    ]
   },
   {
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": []
