--- a/tools/gazelle_analysis.ipynb
+++ b/tools/gazelle_analysis.ipynb
@@ -381,7 +381,7 @@
     "4. python2.7 ./run_dev_server --no-install-hooks -d /home/xxx/trace_result -p1088\n",
     "5. open like in browser: http://127.0.0.1:1088/tracing_examples/trace_viewer.html#/tracing/test_data/application_1647347981137_0221_traceview.json\n",
     "\n",
-    "if "
+    "if you need to open the traceview from hostip instead of 127.0.0.1, hack catapult :-)"
    ]
   },
   {
